education and employment updates

--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -8,7 +8,7 @@
           <h5 class="card-title text-center">
               School of Computing & Information Systems
               <br>
-              2016 - APRIL 2019
+              AUGUST 2016 - APRIL 2019
             </h5>
 
           <ul class="fa-ul">
@@ -42,7 +42,7 @@
           <h5 class="card-title text-center">
             Bachelor of Science
             <br>
-            2014 - 2016
+            AUGUST 2014 - APRIL 2016
           </h5>
           <ul class="fa-ul">
             <li>
@@ -110,6 +110,5 @@
     </div>
 </div>
 
-<!-- <script src="https://maps.google.com/maps/api/js?key=AIzaSyBdaRc3OxlrDuyduTtc226zYIgc4ccN1ys"></script>  -->
-<!-- AIzaSyBdaRc3OxlrDuyduTtc226zYIgc4ccN1ys -->
+
 
