--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -12,17 +12,8 @@
         <div class="row">
           <div class="col-md">
             <ul>
-              <li  class=" rounded hoverable">
-                <h4 class="h4class"><span class=""><i class="fab fa-html5"></i>  <i class="fab fa-css3"></i> HTML5 & CSS3</span></h4>
-              </li>
               <li class=" rounded hoverable">
-                <h4 class="h4class"><span class=" "><i class="fab fa-bitbucket"></i> BitBucket</span></h4>
-              </li>
-              <li class=" rounded hoverable">
-                <h4 class="h4class"><span class=" "><i class="fab fa-github"></i> GitHub</span></h4>
-              </li>
-              <li class=" rounded hoverable">
-                <h4 class="h4class"><span class=" "><i class="fab fa-angular"></i> AngularJS/Angular V2-6</span></h4>
+                <h4 class="h4class"><span class=" "><i class="fab fa-angular"></i> AngularJS/Angular V2-8</span></h4>
               </li>
               <li class=" rounded hoverable">
                 <h4 class="h4class"><span class=" "><i class="fab fa-node"></i> NodeJS</span></h4>
@@ -36,6 +27,31 @@
               <li class=" rounded hoverable">
                 <h4 class="h4class"><span class=" "><i class="fab fa-java"></i> JAVA</span></h4>
               </li>
+              <li  class=" rounded hoverable">
+                <h4 class="h4class"><span class=""><i class="fab fa-html5"></i>  <i class="fab fa-css3"></i> HTML5 & CSS3</span></h4>
+              </li>
+              <li class=" rounded hoverable">
+                <h4 class="h4class"><span class=" "><i class="fab fa-bitbucket"></i> BitBucket</span></h4>
+              </li>
+              <li class=" rounded hoverable">
+                <h4 class="h4class"><span class=" "><i class="fab fa-github"></i> GitHub</span></h4>
+              </li>
+              <li  class=" rounded hoverable">
+                <h4 class="h4class"><span class=""> Eclipse RCP Plugin Development</span></h4>
+              </li>
+              <li  class=" rounded hoverable">
+                <h4 class="h4class"><span class="">Spring</span></h4>
+              </li>
+              <li  class=" rounded hoverable">
+                <h4 class="h4class"><span class="">Electric Cloud</span></h4>
+              </li>
+              <li  class=" rounded hoverable">
+                <h4 class="h4class"><span class="">Maven</span></h4>
+              </li>
+              <li  class=" rounded hoverable">
+                <h4 class="h4class"><span class=""> Maven Tycho</span></h4>
+              </li>
+              
               <li class=" rounded hoverable">
                 <h4 class="h4class"><span class=" ">SharePoint</span></h4>
               </li>
